--- a/02_1_Intro_to_Numpy.ipynb
+++ b/02_1_Intro_to_Numpy.ipynb
@@ -710,14 +710,130 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "d3f49255",
       "metadata": {
-        "id": "d3f49255"
+        "id": "d3f49255",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4abf52a6-ade6-4cf0-d164-60d7b64ae8b8"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0.75060225]\n",
+            " [0.44619453]\n",
+            " [0.92257208]\n",
+            " [0.14114064]\n",
+            " [0.88516778]\n",
+            " [0.39908207]\n",
+            " [0.7508924 ]\n",
+            " [0.74053514]\n",
+            " [0.537799  ]\n",
+            " [0.9683907 ]\n",
+            " [0.06866136]\n",
+            " [0.42333463]\n",
+            " [0.67348733]\n",
+            " [0.53684179]\n",
+            " [0.29166173]\n",
+            " [0.85555652]\n",
+            " [0.92367902]\n",
+            " [0.60507332]\n",
+            " [0.05332274]\n",
+            " [0.89765866]\n",
+            " [0.3654174 ]\n",
+            " [0.90301619]\n",
+            " [0.65732398]\n",
+            " [0.98129327]\n",
+            " [0.94418433]\n",
+            " [0.78477032]\n",
+            " [0.64731453]\n",
+            " [0.81134999]\n",
+            " [0.1802935 ]\n",
+            " [0.94190176]\n",
+            " [0.80608241]\n",
+            " [0.33537844]\n",
+            " [0.99340006]\n",
+            " [0.75002717]\n",
+            " [0.00853949]\n",
+            " [0.31683377]\n",
+            " [0.22739065]\n",
+            " [0.69752619]\n",
+            " [0.04550961]\n",
+            " [0.89850987]\n",
+            " [0.9114913 ]\n",
+            " [0.91787627]\n",
+            " [0.0162772 ]\n",
+            " [0.83297845]\n",
+            " [0.6209028 ]\n",
+            " [0.9118249 ]\n",
+            " [0.05503316]\n",
+            " [0.23616718]\n",
+            " [0.69909891]\n",
+            " [0.51896679]\n",
+            " [0.73593773]\n",
+            " [0.21782298]\n",
+            " [0.80746624]\n",
+            " [0.64200175]\n",
+            " [0.43965963]\n",
+            " [0.15096884]\n",
+            " [0.86213253]\n",
+            " [0.2267202 ]\n",
+            " [0.81063968]\n",
+            " [0.12401925]\n",
+            " [0.9334975 ]\n",
+            " [0.80795019]\n",
+            " [0.81511935]\n",
+            " [0.58851269]\n",
+            " [0.85279717]\n",
+            " [0.94045745]\n",
+            " [0.13384582]\n",
+            " [0.48710951]\n",
+            " [0.11510025]\n",
+            " [0.18394219]\n",
+            " [0.19380566]\n",
+            " [0.92219439]\n",
+            " [0.54745931]\n",
+            " [0.6390073 ]\n",
+            " [0.16367464]\n",
+            " [0.124158  ]\n",
+            " [0.34035193]\n",
+            " [0.41261714]\n",
+            " [0.14120649]\n",
+            " [0.36738065]\n",
+            " [0.4856805 ]\n",
+            " [0.4776416 ]\n",
+            " [0.65709771]\n",
+            " [0.48721946]\n",
+            " [0.96866036]\n",
+            " [0.54161294]\n",
+            " [0.81094302]\n",
+            " [0.0691596 ]\n",
+            " [0.6398476 ]\n",
+            " [0.44441709]\n",
+            " [0.29003397]\n",
+            " [0.39062915]\n",
+            " [0.7726918 ]\n",
+            " [0.25497425]\n",
+            " [0.68006982]\n",
+            " [0.9667017 ]\n",
+            " [0.55552344]]\n"
+          ]
+        }
+      ],
       "source": [
-        "### Pending ###"
+        "import datetime\n",
+        "def nac(x = datetime.datetime(1997, 1, 2)):\n",
+        "  anio = int(x.strftime(\"%Y\"))\n",
+        "  mes = int(x.strftime(\"%m\"))\n",
+        "  dia = int(x.strftime(\"%d\"))\n",
+        "  nac_array = np.random.random((anio-1900, abs(mes-dia))) #No me tira el array como debería\n",
+        "  return nac_array\n",
+        "\n",
+        "print(nac())\n"
       ]
     },
     {
@@ -1243,36 +1359,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "6ada209f",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 478
+          "height": 701
         },
         "id": "6ada209f",
-        "outputId": "6b4b1376-d512-4f2e-f2b5-76f5fbf73647"
+        "outputId": "7d22fb56-4192-4aab-853a-4e01ef26eb91"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[0.8699427  0.65087443 0.58922114 0.62435058 0.69088604 0.9691484\n",
-            "  0.18002801]\n",
-            " [0.0856198  0.68540387 0.60649588 0.8023967  0.24380794 0.51288998\n",
-            "  0.0514533 ]\n",
-            " [0.94873762 0.70871581 0.56387234 0.89962484 0.8375227  0.66751889\n",
-            "  0.37304089]\n",
-            " [0.05751849 0.34021472 0.91558452 0.36506751 0.16101268 0.92762715\n",
-            "  0.02945615]\n",
-            " [0.07910327 0.26927203 0.56484912 0.00713254 0.45725708 0.61228681\n",
-            "  0.27301228]]\n",
-            "[[0.05103588 0.33006014 0.73406573 0.10865976 0.59943311]\n",
-            " [0.68645207 0.83830275 0.62237779 0.23494344 0.46484813]\n",
-            " [0.69554503 0.75323163 0.32538864 0.80684268 0.05397048]\n",
-            " [0.25851199 0.71284805 0.85326089 0.1843308  0.72209459]\n",
-            " [0.15760162 0.89664021 0.27433506 0.71653341 0.04296573]]\n"
+            "[[0.09822786 0.04518963 0.40977169 0.05510632 0.45078314 0.92169008\n",
+            "  0.87544946]\n",
+            " [0.10587257 0.25028135 0.39152717 0.33936154 0.70526765 0.05012979\n",
+            "  0.69933089]\n",
+            " [0.95325705 0.2813097  0.72851077 0.71563823 0.80493953 0.2342658\n",
+            "  0.63448234]\n",
+            " [0.32070862 0.80195459 0.21042746 0.61488768 0.92417813 0.24587056\n",
+            "  0.37778394]\n",
+            " [0.82198638 0.02679047 0.78203992 0.1947995  0.61595742 0.60491307\n",
+            "  0.33282333]]\n",
+            "[[0.31929094 0.42576718 0.41564249 0.60894021 0.44323692 0.67323099\n",
+            "  0.56870114 0.6863313  0.45600285]\n",
+            " [0.82864105 0.8259493  0.50664417 0.58063399 0.074799   0.48481721\n",
+            "  0.16055984 0.48758209 0.33072323]\n",
+            " [0.57329589 0.6679541  0.55032817 0.15032259 0.09725004 0.10886733\n",
+            "  0.18636528 0.09157697 0.05405854]\n",
+            " [0.79529288 0.12238688 0.39798976 0.9706219  0.16688934 0.65091644\n",
+            "  0.39714777 0.990229   0.81428736]\n",
+            " [0.18040601 0.62402428 0.29973156 0.89649098 0.85039775 0.79404742\n",
+            "  0.10168426 0.9098558  0.67407906]\n",
+            " [0.49815567 0.57798382 0.79893058 0.89318912 0.8358268  0.54283315\n",
+            "  0.91459017 0.78485195 0.69081344]\n",
+            " [0.08177311 0.68911366 0.33690295 0.01751274 0.20068074 0.60693146\n",
+            "  0.73715639 0.7339334  0.09812582]\n",
+            " [0.26816779 0.06115515 0.59067658 0.56779116 0.43808451 0.31317671\n",
+            "  0.97286311 0.43965685 0.33230868]]\n"
           ]
         },
         {
@@ -1282,19 +1409,19 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-162-95c7ace9956a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmultiply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#No se puede multiplicar: \"operands could not be broadcast together with shapes (5,7) (5,5)\". Para multiplicar matrices nrow k tiene que ser igual a ncol b\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;31m#(No es por esto aparentemente)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (5,7) (5,5) "
+            "\u001b[0;32m<ipython-input-12-8589af5cab05>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmultiply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#No se puede multiplicar: \"operands could not be broadcast together with shapes (5,7) (5,5)\". Para multiplicar matrices nrow k tiene que ser igual a ncol b\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;31m#(No es por esto aparentemente)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (5,7) (8,9) "
           ]
         }
       ],
       "source": [
         "k= np.random.random((5,7)) #Creates random 5x7 matrix\n",
         "print(k)\n",
-        "j= np.random.random((5,5)) #Creates random 8x9 matrix\n",
+        "j= np.random.random((8,9)) #Creates random 8x9 matrix\n",
         "print(j)\n",
         "\n",
         "print(np.multiply(k,j)) #No se puede multiplicar: \"operands could not be broadcast together with shapes (5,7) (5,5)\". Para multiplicar matrices nrow k tiene que ser igual a ncol b\n",
-        "#(No es por esto aparentemente)"
+        "#(No es por esto aparentemente)\n"
       ]
     },
     {
@@ -1675,11 +1802,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "id": "34b4fa08",
       "metadata": {
         "id": "34b4fa08",
-        "outputId": "18beaeb0-3339-4fcc-e355-81528866196e",
+        "outputId": "45895dd5-f73c-4ace-ac7c-0804f4eee85f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1689,9 +1816,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[0.7289798  0.51273125]\n",
-            " [0.83251162 0.5144865 ]\n",
-            " [0.50400088 0.93345237]]\n",
+            "[[0.36926767 0.73189741]\n",
+            " [0.38768872 0.30298359]\n",
+            " [0.18405411 0.57901692]]\n",
             "[[0. 0.]\n",
             " [0. 0.]\n",
             " [0. 0.]]\n",
@@ -1702,7 +1829,7 @@
         }
       ],
       "source": [
-        "rm = np.random.rand(3,2)\n",
+        "rm = np.random.rand(3,2)  #Si usamos una distirbución conocida es más sencillo np.random.uniform(1, 5, 5)\n",
         "print(rm)\n",
         "print(np.floor(rm))\n",
         "print(np.trunc(rm))"
