--- a/02_1_Intro_to_Numpy.ipynb
+++ b/02_1_Intro_to_Numpy.ipynb
@@ -1847,14 +1847,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "id": "663cc611",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "663cc611",
-        "outputId": "78e8e79b-bcb0-4761-b414-e4bc2eca644e"
+        "outputId": "f6742882-6320-45c9-a8ed-c2311b7300c7"
       },
       "outputs": [
         {
@@ -1870,7 +1870,12 @@
             " [0. 1. 2. 3. 4.]\n",
             " [0. 1. 2. 3. 4.]\n",
             " [0. 1. 2. 3. 4.]\n",
-            " [0. 1. 2. 3. 4.]]\n"
+            " [0. 1. 2. 3. 4.]]\n",
+            "[[0 1 2 3 4]\n",
+            " [0 1 2 3 4]\n",
+            " [0 1 2 3 4]\n",
+            " [0 1 2 3 4]\n",
+            " [0 1 2 3 4]]\n"
           ]
         }
       ],
@@ -1878,7 +1883,11 @@
         "matriz = np.zeros((5,5)) #Matriz de 5x5 con valores 0\n",
         "print(matriz)\n",
         "matriz += np.arange(5) \n",
-        "print(matriz)\n"
+        "print(matriz)\n",
+        "\n",
+        "#Otra forma: \n",
+        "#ma_triz = np.tile(np.arange(0,5), (5,1))\n",
+        "#print(ma_triz)"
       ]
     },
     {
