--- a/02_1_Intro_to_Numpy.ipynb
+++ b/02_1_Intro_to_Numpy.ipynb
@@ -710,7 +710,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "d3f49255",
       "metadata": {
         "id": "d3f49255",
@@ -1359,69 +1359,66 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 6,
       "id": "6ada209f",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 701
+          "base_uri": "https://localhost:8080/"
         },
         "id": "6ada209f",
-        "outputId": "7d22fb56-4192-4aab-853a-4e01ef26eb91"
+        "outputId": "44b27c6d-693c-4b2c-c439-9a9069db93fe"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[0.09822786 0.04518963 0.40977169 0.05510632 0.45078314 0.92169008\n",
-            "  0.87544946]\n",
-            " [0.10587257 0.25028135 0.39152717 0.33936154 0.70526765 0.05012979\n",
-            "  0.69933089]\n",
-            " [0.95325705 0.2813097  0.72851077 0.71563823 0.80493953 0.2342658\n",
-            "  0.63448234]\n",
-            " [0.32070862 0.80195459 0.21042746 0.61488768 0.92417813 0.24587056\n",
-            "  0.37778394]\n",
-            " [0.82198638 0.02679047 0.78203992 0.1947995  0.61595742 0.60491307\n",
-            "  0.33282333]]\n",
-            "[[0.31929094 0.42576718 0.41564249 0.60894021 0.44323692 0.67323099\n",
-            "  0.56870114 0.6863313  0.45600285]\n",
-            " [0.82864105 0.8259493  0.50664417 0.58063399 0.074799   0.48481721\n",
-            "  0.16055984 0.48758209 0.33072323]\n",
-            " [0.57329589 0.6679541  0.55032817 0.15032259 0.09725004 0.10886733\n",
-            "  0.18636528 0.09157697 0.05405854]\n",
-            " [0.79529288 0.12238688 0.39798976 0.9706219  0.16688934 0.65091644\n",
-            "  0.39714777 0.990229   0.81428736]\n",
-            " [0.18040601 0.62402428 0.29973156 0.89649098 0.85039775 0.79404742\n",
-            "  0.10168426 0.9098558  0.67407906]\n",
-            " [0.49815567 0.57798382 0.79893058 0.89318912 0.8358268  0.54283315\n",
-            "  0.91459017 0.78485195 0.69081344]\n",
-            " [0.08177311 0.68911366 0.33690295 0.01751274 0.20068074 0.60693146\n",
-            "  0.73715639 0.7339334  0.09812582]\n",
-            " [0.26816779 0.06115515 0.59067658 0.56779116 0.43808451 0.31317671\n",
-            "  0.97286311 0.43965685 0.33230868]]\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-12-8589af5cab05>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmultiply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#No se puede multiplicar: \"operands could not be broadcast together with shapes (5,7) (5,5)\". Para multiplicar matrices nrow k tiene que ser igual a ncol b\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;31m#(No es por esto aparentemente)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (5,7) (8,9) "
+            "[[0.9670409  0.86783217 0.03139424 0.90383538 0.90981529 0.47377498\n",
+            "  0.03005762]\n",
+            " [0.62444137 0.16623422 0.09368525 0.49351375 0.89943448 0.7436976\n",
+            "  0.00479913]\n",
+            " [0.19973388 0.50300675 0.62245567 0.91114434 0.87233822 0.42396143\n",
+            "  0.81431504]\n",
+            " [0.81783409 0.98784924 0.12091152 0.87278257 0.55223092 0.46411726\n",
+            "  0.34150257]\n",
+            " [0.96441964 0.5695103  0.49765314 0.07369269 0.21745145 0.45179539\n",
+            "  0.46064537]]\n",
+            "[[0.56874274 0.9397953  0.19624429 0.30495422 0.39917649 0.98684689\n",
+            "  0.17932804 0.84966349 0.85465697]\n",
+            " [0.70741738 0.94575636 0.96585976 0.08189657 0.44955242 0.31465103\n",
+            "  0.10791509 0.13345313 0.86399999]\n",
+            " [0.22510266 0.78716329 0.92879352 0.85895423 0.70683903 0.50612032\n",
+            "  0.43510959 0.56641618 0.77254126]\n",
+            " [0.68509016 0.89028497 0.3136767  0.61974337 0.39059929 0.2326568\n",
+            "  0.22166938 0.67897395 0.45759251]\n",
+            " [0.48786902 0.79663883 0.88350469 0.21723061 0.78954104 0.38004224\n",
+            "  0.85724127 0.06072401 0.4501907 ]\n",
+            " [0.58039679 0.5321093  0.63608408 0.72378191 0.28153183 0.86629811\n",
+            "  0.08350112 0.10739282 0.71069713]\n",
+            " [0.84762123 0.01308405 0.88136782 0.46395332 0.24094037 0.07224339\n",
+            "  0.75832813 0.85848497 0.96779359]]\n",
+            "[[2.53451835 3.53624926 2.47232991 1.50758271 2.01034551 2.21192837\n",
+            "  1.3233678  1.70086881 2.78952734]\n",
+            " [1.70644744 2.36949322 1.79685859 1.3262494  1.5036511  1.81720275\n",
+            "  1.11685052 1.07950236 1.9136188 ]\n",
+            " [2.59564872 2.89577001 3.14706925 2.07559916 2.10603209 1.64003097\n",
+            "  1.96363273 2.00562616 2.9852229 ]\n",
+            " [2.61736453 3.26642158 2.58479807 1.58938449 1.8458779  2.01876567\n",
+            "  1.27046381 1.86434957 2.95421727]\n",
+            " [1.87265856 2.32197871 2.11015886 1.401833   1.43141304 1.9072578\n",
+            "  1.04072943 1.68453053 2.59927761]]\n"
           ]
         }
       ],
       "source": [
-        "k= np.random.random((5,7)) #Creates random 5x7 matrix\n",
-        "print(k)\n",
-        "j= np.random.random((8,9)) #Creates random 8x9 matrix\n",
-        "print(j)\n",
+        "m_k= np.random.random((5,7)) #Creates random 5x7 matrix\n",
+        "print(m_k)\n",
+        "m_j= np.random.random((7,9)) #Creates random 7x9 matrix\n",
+        "print(m_j)\n",
         "\n",
-        "print(np.multiply(k,j)) #No se puede multiplicar: \"operands could not be broadcast together with shapes (5,7) (5,5)\". Para multiplicar matrices nrow k tiene que ser igual a ncol b\n",
-        "#(No es por esto aparentemente)\n"
+        "print(np.dot(m_k,m_j)) #Para multiplicar matrices nrow k tiene que ser igual a ncol b, por eso hice m_j de 7x9\n",
+        "\n",
+        "#https://stackoverflow.com/questions/24560298/python-numpy-valueerror-operands-could-not-be-broadcast-together-with-shapes"
       ]
     },
     {
@@ -1652,7 +1649,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "6801c73d",
       "metadata": {
         "colab": {
@@ -1713,7 +1710,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "8ba1badb",
       "metadata": {
         "colab": {
@@ -1754,7 +1751,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "eb8ebe45",
       "metadata": {
         "colab": {
@@ -1802,7 +1799,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "34b4fa08",
       "metadata": {
         "id": "34b4fa08",
@@ -1847,14 +1844,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "663cc611",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "663cc611",
-        "outputId": "f6742882-6320-45c9-a8ed-c2311b7300c7"
+        "outputId": "c8ffe68b-c848-484f-a8dd-5c146dd0039d"
       },
       "outputs": [
         {
@@ -1870,12 +1867,7 @@
             " [0. 1. 2. 3. 4.]\n",
             " [0. 1. 2. 3. 4.]\n",
             " [0. 1. 2. 3. 4.]\n",
-            " [0. 1. 2. 3. 4.]]\n",
-            "[[0 1 2 3 4]\n",
-            " [0 1 2 3 4]\n",
-            " [0 1 2 3 4]\n",
-            " [0 1 2 3 4]\n",
-            " [0 1 2 3 4]]\n"
+            " [0. 1. 2. 3. 4.]]\n"
           ]
         }
       ],
@@ -1906,26 +1898,26 @@
       "id": "7336b8e4",
       "metadata": {
         "id": "7336b8e4",
-        "outputId": "50b5f529-5f92-454e-8d86-340f570e46c1",
+        "outputId": "f413b457-425c-4ab8-b704-5b538d6bdcc4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([ 3,  1,  5,  3, 10, 10,  5,  1,  2,  0])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 15
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 1 2 3 4 5 6 7 8 9]\n"
+          ]
         }
       ],
       "source": [
-        "b = np.random.randint(50, size=10) #Esto de por sí crea un array con 10 números random del 0 al 50 (50 no inclusivo)\n",
-        "b "
+        "def generate():\n",
+        "  for x in range(10):\n",
+        "   yield x\n",
+        "Z = np.fromiter(generate(),dtype=np.int0,count=-1)\n",
+        "print(Z)"
       ]
     },
     {
@@ -2839,14 +2831,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "68c333b0",
       "metadata": {
         "id": "68c333b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "14e31853-8b8e-41e0-ef58-74574b790348"
+        "outputId": "e1dc383c-452e-431a-af30-3a7d1839cb1d"
       },
       "outputs": [
         {
